--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -3,23 +3,23 @@
   "localized-strings": {
     "next": "下一篇",
     "previous": "上一篇",
-    "tagline": "Wiki for Ares Protoclol",
+    "tagline": "Wiki for Ares network",
     "docs": {
       "buildFileStoringDemo": {
-        "title": "代码示例：使用Ares存储文件",
-        "sidebar_label": "代码示例：使用Ares存储文件"
+        "title": "代码示例：使用Crust存储文件",
+        "sidebar_label": "代码示例：使用Crust存储文件"
       },
       "bridge": {
         "title": "资产跨链桥",
         "sidebar_label": "资产跨链桥"
       },
       "buildHelloCrust": {
-        "title": "Hello Ares",
-        "sidebar_label": "Hello Ares"
+        "title": "Hello Crust",
+        "sidebar_label": "Hello Crust"
       },
       "buildRockyGuidance": {
-        "title": "Ares Rocky Network",
-        "sidebar_label": "Ares Rocky Network"
+        "title": "Crust Rocky Network",
+        "sidebar_label": "Crust Rocky Network"
       },
       "buildIntegrationContentStorageDelivery": {
         "title": "内容存储与分发",
@@ -42,36 +42,36 @@
         "sidebar_label": "IPFS SDKs"
       },
       "buildCrustKits": {
-        "title": "Ares SDK",
-        "sidebar_label": "Ares SDK"
+        "title": "Crust SDK",
+        "sidebar_label": "Crust SDK"
       },
       "buildCrustJs": {
         "title": "crust.js",
         "sidebar_label": "crust.js"
       },
       "buildNode": {
-        "title": "Ares 节点",
-        "sidebar_label": "Ares 节点"
+        "title": "Crust 节点",
+        "sidebar_label": "Crust 节点"
       },
       "buildSmanager": {
         "title": "Crust Storage Manager",
         "sidebar_label": "Crust Storage Manager"
       },
       "claimsLockedCRU": {
-        "title": "锁定的ARES 认领",
-        "sidebar_label": "锁定的ARES 认领"
+        "title": "锁定的CRU 认领",
+        "sidebar_label": "锁定的CRU 认领"
       },
       "lockedCRUUnlock": {
-        "title": "锁定的ARES 解锁",
-        "sidebar_label": "锁定的ARES 解锁"
+        "title": "锁定的CRU 解锁",
+        "sidebar_label": "锁定的CRU 解锁"
       },
       "claims": {
-        "title": "ARES 认领",
-        "sidebar_label": "ARES 认领"
+        "title": "CRU 认领",
+        "sidebar_label": "CRU 认领"
       },
       "crustWallet": {
-        "title": "Ares 钱包",
-        "sidebar_label": "Ares 钱包"
+        "title": "Crust 钱包",
+        "sidebar_label": "Crust 钱包"
       },
       "contributing": {
         "title": "贡献",
@@ -90,48 +90,48 @@
         "sidebar_label": "账户"
       },
       "crustTokens": {
-        "title": "Ares 通证",
-        "sidebar_label": "Ares 通证"
+        "title": "Crust 通证",
+        "sidebar_label": "Crust 通证"
       },
       "crustBuilderGuide": {
-        "title": "Ares 开发者文档",
-        "sidebar_label": "Ares 开发者文档"
+        "title": "Crust 开发者文档",
+        "sidebar_label": "Crust 开发者文档"
       },
       "crustConsensus": {
-        "title": "Ares 共识算法",
-        "sidebar_label": "Ares共识算法"
+        "title": "Crust 共识算法",
+        "sidebar_label": "Crust 共识算法"
       },
       "crustStorageExplorer": {
-        "title": "Ares 存储浏览器",
-        "sidebar_label": "Ares 存储浏览器"
+        "title": "Crust 存储浏览器",
+        "sidebar_label": "Crust 存储浏览器"
       },
       "crustIntegrationGuide": {
-        "title": "Ares 集成指南",
-        "sidebar_label": "Ares 集成指南"
+        "title": "Crust 集成指南",
+        "sidebar_label": "Crust 集成指南"
       },
       "DSM": {
         "title": "去中心化存储市场",
         "sidebar_label": "去中心化存储市场"
       },
       "ecosystemGrowth": {
-        "title": "Ares 生态成长计划",
-        "sidebar_label": "Ares 生态成长计划"
+        "title": "Crust 生态成长计划",
+        "sidebar_label": "Crust 生态成长计划"
       },
       "frequentlyAskedQuestions": {
         "title": "Editing How to submit bugs & feedbacks",
         "sidebar_label": "Editing How to submit bugs & feedbacks"
       },
       "gettingStarted": {
-        "title": "Ares概述",
-        "sidebar_label": "Ares概述"
+        "title": "Crust概述",
+        "sidebar_label": "Crust概述"
       },
       "glossary": {
-        "title": "Ares 术语",
-        "sidebar_label": "Ares 术语"
+        "title": "Crust 术语",
+        "sidebar_label": "Crust 术语"
       },
       "crustGrants": {
-        "title": "Ares Grants",
-        "sidebar_label": "Ares Grants"
+        "title": "Crust Grants",
+        "sidebar_label": "Crust Grants"
       },
       "GPoS": {
         "title": "GPoS",
@@ -238,7 +238,7 @@
         "sidebar_label": "存储用户指南"
       },
       "appsStorageIssue": {
-        "title": "使用Ares Apps 存储的问题",
+        "title": "使用Crust Apps 存储的问题",
         "sidebar_label": "使用Crust Apps 存储的问题"
       },
       "orderSettlement": {
@@ -265,9 +265,8 @@
     "categories": {
       "General": "概览",
       "Learn": "学习",
-      "Build": "构建",
-      "Node": "节点",
-      "Storage": "存储"
+      "Build": "构建"
+      
     }
   },
   "pages-strings": {
