--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -274,6 +274,7 @@
     },
     "categories": {
       "General": "General",
+      "Whitepaper": "Whitepaper",
       "Learn": "Learn",
       "Build": "Build",
       "Node": "Node"
