--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -280,6 +280,7 @@
     },
     "categories": {
       "General": "概览",
+      "Whitepaper": "白皮书",
       "Learn": "学习",
       "Build": "构建"
       
