--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -282,7 +282,8 @@
       "General": "概览",
       "Whitepaper": "白皮书",
       "Learn": "学习",
-      "Build": "构建"
+      "Build": "构建",
+      "Node": "节点"
       
     }
   },
