--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -14,8 +14,8 @@
         "sidebar_label": "资产跨链桥"
       },
       "buildHelloCrust": {
-        "title": "Hello Crust",
-        "sidebar_label": "Hello Crust"
+        "title": "Hello Ares",
+        "sidebar_label": "Hello Ares"
       },
       "buildRockyGuidance": {
         "title": "搭建验证人节点",
@@ -42,20 +42,20 @@
         "sidebar_label": "IPFS SDKs"
       },
       "buildCrustKits": {
-        "title": "Crust SDK",
-        "sidebar_label": "Crust SDK"
+        "title": "Ares SDK",
+        "sidebar_label": "Ares SDK"
       },
       "buildCrustJs": {
-        "title": "crust.js",
-        "sidebar_label": "crust.js"
+        "title": "Ares.js",
+        "sidebar_label": "Ares.js"
       },
       "buildNode": {
         "title": "硬件环境",
         "sidebar_label": "硬件环境"
       },
       "buildSmanager": {
-        "title": "Crust Storage Manager",
-        "sidebar_label": "Crust Storage Manager"
+        "title": "Ares Storage Manager",
+        "sidebar_label": "Ares Storage Manager"
       },
       "claimsLockedCRU": {
         "title": "锁定的CRU 认领",
@@ -70,8 +70,8 @@
         "sidebar_label": "CRU 认领"
       },
       "crustWallet": {
-        "title": "Crust 钱包",
-        "sidebar_label": "Crust 钱包"
+        "title": "Ares 钱包",
+        "sidebar_label": "Ares 钱包"
       },
       "contributing": {
         "title": "贡献",
@@ -94,44 +94,44 @@
         "sidebar_label": "流动性挖矿"
       },
       "crustBuilderGuide": {
-        "title": "Crust 开发者文档",
-        "sidebar_label": "Crust 开发者文档"
+        "title": "Ares 开发者文档",
+        "sidebar_label": "Ares 开发者文档"
       },
       "crustConsensus": {
-        "title": "Crust 共识算法",
-        "sidebar_label": "Crust 共识算法"
+        "title": "Ares 共识算法",
+        "sidebar_label": "Ares 共识算法"
       },
       "crustStorageExplorer": {
-        "title": "Crust 存储浏览器",
-        "sidebar_label": "Crust 存储浏览器"
+        "title": "Ares 存储浏览器",
+        "sidebar_label": "Ares 存储浏览器"
       },
       "crustIntegrationGuide": {
-        "title": "Crust 集成指南",
-        "sidebar_label": "Crust 集成指南"
+        "title": "Ares 集成指南",
+        "sidebar_label": "Ares 集成指南"
       },
       "DSM": {
         "title": "去中心化存储市场",
         "sidebar_label": "去中心化存储市场"
       },
       "ecosystemGrowth": {
-        "title": "Crust 生态成长计划",
-        "sidebar_label": "Crust 生态成长计划"
+        "title": "Ares 生态成长计划",
+        "sidebar_label": "Ares 生态成长计划"
       },
       "frequentlyAskedQuestions": {
         "title": "Editing How to submit bugs & feedbacks",
         "sidebar_label": "Editing How to submit bugs & feedbacks"
       },
       "gettingStarted": {
-        "title": "Crust概述",
-        "sidebar_label": "Crust概述"
+        "title": "Ares概述",
+        "sidebar_label": "Ares概述"
       },
       "glossary": {
-        "title": "Crust 术语",
-        "sidebar_label": "Crust 术语"
+        "title": "Ares 术语",
+        "sidebar_label": "Ares 术语"
       },
       "crustGrants": {
-        "title": "Crust Grants",
-        "sidebar_label": "Crust Grants"
+        "title": "Ares Grants",
+        "sidebar_label": "Ares Grants"
       },
       "GPoS": {
         "title": "GPoS",
@@ -187,8 +187,8 @@
       },
 
       "buildCrossChainSolution": {
-        "title": "运行节点程序",
-        "sidebar_label": "运行节点程序"
+        "title": "验证&&运行节点程序",
+        "sidebar_label": "验证&&运行节点程序"
       },
 
       "buildFileStoringWithGWDemo": {
@@ -257,8 +257,8 @@
         "sidebar_label": "转账"
       },
       "appsStorageIssue": {
-        "title": "使用Crust Apps 存储的问题",
-        "sidebar_label": "使用Crust Apps 存储的问题"
+        "title": "使用Ares Apps 存储的问题",
+        "sidebar_label": "使用Ares Apps 存储的问题"
       },
       "orderSettlement": {
         "title": "存储订单清算指南",
