--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,6 +5,14 @@
     "previous": "Previous",
     "tagline": "Wiki for Ares Network",
     "docs": {
+      "aresBasic": {
+        "title": "Ares Basic",
+        "sidebar_label": "Ares Basic"
+      },
+      "aresOverview": {
+        "title": "Ares Overview",
+        "sidebar_label": "Ares Overview"
+      },
       "aresRelated": {
         "title": "Liquidity mining",
         "sidebar_label": "Liquidity mining"
@@ -35,14 +43,6 @@
       "contributing": {
         "title": "Contributing",
         "sidebar_label": "Contributing"
-      },
-      "aresBasic": {
-        "title": "Ares Basic",
-        "sidebar_label": "Ares Basic"
-      },
-      "aresOverview": {
-        "title": "Ares Overview",
-        "sidebar_label": "Ares Overview"
       },
       "gettingStarted": {
         "title": "Ares Overview",
@@ -93,8 +93,8 @@
         "sidebar_label": "Introduction"
       },
       "sWorkerVersion": {
-        "title": "Ares term",
-        "sidebar_label": "Ares term"
+        "title": "Ares Glossary",
+        "sidebar_label": "Ares Glossary"
       },
       "sWorkerWorkload": {
         "title": "Data market",
