--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -89,8 +89,8 @@
         "sidebar_label": "Introduction"
       },
       "sWorkerVersion": {
-        "title": "Ares term",
-        "sidebar_label": "Ares term"
+        "title": "Ares Glossary",
+        "sidebar_label": "Ares Glossary"
       },
       "sWorkerWorkload": {
         "title": "Data market",
