--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -105,8 +105,8 @@
         "sidebar_label": "JSON-RPC APIS"
       },
       "verifyingRunValidatorNode": {
-        "title": "Verifying & Run Validator Node",
-        "sidebar_label": "Verifying & Run Validator Node"
+        "title": "Verify & Run Validator Nodes",
+        "sidebar_label": "Verify & Run Validator Nodes"
       }
     },
     "links": {
