--- a/website/i18n/zh-CN.json
+++ b/website/i18n/zh-CN.json
@@ -258,8 +258,11 @@
       "Whitepaper": "白皮书",
       "Learn": "学习",
       "Build": "构建",
-      "Node": "节点"
-
+      "Node": "节点",
+      "Stake Mining": "质押挖矿",
+      "Slot auction": "插槽竞拍",
+      "Basic": "基础",
+      "Gladios Guide": "Gladios指南"
     }
   },
   "pages-strings": {
